--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </header>
 
   <section class="form-container">
-    <form id="bookingForm" action="https://docs.google.com/forms/d/e/1FAIpQLScdD1lE8u0w-pbs9dZmYq-eFy2U4kRWLl3f7iO5uaK-x5nTmOQ/viewform" method="GET" target="_blank">
+    <form id="bookingForm" action="https://docs.google.com/forms/d/1YFfnBbLTR2XgL3O1YhepcGcF-dTKAvad7tBNbqhWI68/edit?chromeless=1/viewform" method="GET" target="_blank">
       <label for="name">Your Name:</label>
       <input type="text" id="name" name="entry.1234567890" required>
       <span id="nameError" class="error"></span>
@@ -109,11 +109,19 @@
 
       <label for="time">Preferred Time Slot:</label>
       <select id="time" name="entry.1617181920" required>
-        <option value="9:00 AM - 10:00 AM">9:00 AM - 10:00 AM</option>
-        <option value="10:00 AM - 11:00 AM">10:00 AM - 11:00 AM</option>
-        <option value="11:00 AM - 12:00 PM">11:00 AM - 12:00 PM</option>
-        <option value="12:00 PM - 1:00 PM">12:00 PM - 1:00 PM</option>
-        <option value="1:00 PM - 2:00 PM">1:00 PM - 2:00 PM</option>
+        <option value="10:00 AM - 10:30 AM">10:00 AM - 10:30 AM</option>
+        <option value="10:30 AM - 11:00 AM">10:30 AM - 11:00 AM</option>
+        <option value="11:00 AM - 11:30 AM">11:00 AM - 11:30 AM</option>
+        <option value="11:30 AM - 12:00 PM">11:30 AM - 12:00 PM</option>
+        <option value="12:00 PM - 12:30 PM">12:00 PM - 12:30 PM</option>
+        <option value="12:30 PM - 1:00 PM">12:30 PM - 1:00 PM</option>
+        <option value="2:00 PM - 2:30 PM">2:00 PM - 2:30 PM</option>
+        <option value="2:30 PM - 3:00 PM">2:30 PM - 3:00 PM</option>
+        <option value="3:00 PM - 3:30 PM">3:00 PM - 3:30 PM</option>
+        <option value="3:30 PM - 4:00 PM">3:30 PM - 4:00 PM</option>
+        <option value="4:00 PM - 4:30 PM">4:00 PM - 4:30 PM</option>
+        <option value="4:30 PM - 5:00 PM">4:30 PM - 5:00 PM</option>
+
       </select>
       <span id="timeError" class="error"></span>
 
