--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <span id="nameError" class="error"></span>
 
       <label for="room">Hostel Room Number:</label>
-      <input type="text" id="room" name="entry.9876543210" required>
+      <input type="number" id="room" name="entry.9876543210" required>
       <span id="roomError" class="error"></span>
 
       <label for="date">Preferred Date:</label>
